--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -459,6 +459,8 @@
     <string name="offered_hint">Great! \n\nYou\'ve offered %1$s the job of %2$s
         \nstarting on %3$s
         \n\nWe\'ll let you know as soon as they have made a decision! </string>
+    <string name="worker_details_decline">Why was this worker \nnot right?</string>
+    <string name="worker_details_decline_hint">This feedback will be sent to the worker</string>
 
     <!-- My Accounts -->
     <string name="view_profile">View Profile</string>
@@ -911,4 +913,7 @@
     <string name="login_error">Oops! Something went wrong. Please check your email and password</string>
     <string name="help_no_matches">Oops! I\'m afraid we cant answer that. Please contact us here..</string>
     <string name="help_contact_us">Still need help? Contact us here.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
