--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -716,6 +716,9 @@
 
 
     <!-- Employer Payments -->
+    <string name="payments_success">Good news!
+                        \n\nYour account is now live.
+                        \n\nHappy booking!</string>
     <string name="payments_standard_price"><strike>£1999+VAT</strike> \n£999+VAT</string>
     <string name="payments_basic_price"><strike>£999+VAT</strike> \n£499+VAT</string>
     <string name="payments_premium_price"><strike>£3498+VAT</strike> \n£1749+VAT</string>
