--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1253,4 +1253,10 @@
         payments are non-refundable and we do not provide refunds or
         credits for any partial-month subscription periods or unused
         Booking Credits.</font></string>
+    
+    <!-- New feature Connect --> 
+    <string name="connect_header">Do you want to interview/connect with
+                matched workers or do you just want to book?</string>
+    <string name="connect_connect_yes">I want to speak with them before hiring</string>
+    <string name="connect_connect_no">I want to book them to turn up and start</string>
 </resources>
