new feature connect part3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1267,4 +1267,5 @@
     <string name="connect_email">Email address</string>
     <string name="connect_number">Contact number</string>
     <string name="connect_person">Contact person</string>
+    <string name="employer_jobs_app_deadline">Application \ndeadline %s</string>
 </resources>
