--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1269,4 +1269,14 @@
     <string name="connect_person">Contact person</string>
     <string name="employer_jobs_app_deadline">Application \ndeadline %s</string>
     <string name="connect_connected">Connected</string>
+    <string name="connect_prompt_book">Are you sure you\'d
+                    like to offer this job to %s ?</string>
+    <string name="connect_prompt_connect">Are you sure you\'d like
+                    to connect with %s ?</string>
+    <string name="connect_confirm">Thanks! \n\nWe\'ll let you know when %s connects.</string>
+    <string name="connect_hint_sent">You\'ve offered to connect.
+        \n\nWe\'ll let you know when %s connects.</string>
+    <string name="connect_worker_connected">Cool! %s is now a connection.</string>
+    <string name="connect_worker_connected_more">Get in touch with %s to
+                                confirm next steps.</string>
 </resources>
