SC-825(issue which evgheni reported for message saying role for even qual,skill etc)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1288,6 +1288,9 @@
     <string name="suggest_skill">Skill not listed?</string>
     <string name="suggest_experience">Experience  not listed?</string>
     <string name="suggest_role_title">Please suggest a role which is not listed</string>
+    <string name="suggest_qual_title">Please suggest a qualification which is not listed</string>
+    <string name="suggest_skill_title">Please suggest a skill which is not listed</string>
+    <string name="suggest_experience_title">Please suggest a experience which is not listed</string>
     <string name="suggest_role_thanks">Thanks for suggesting this new role. We\'ll be adding it to the list very soon...</string>
     <string name="suggest_qual_thanks">Thanks for suggesting this new qualification. We\'ll be adding it to the list very soon...</string>
     <string name="suggest_skill_thanks">Thanks for suggesting this new skill. We\'ll be adding it to the list very soon...</string>
