--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -434,7 +434,7 @@
     <string name="job_details_experience">Experience </string>
     <string name="job_details_english_level">Level of English</string>
     <string name="job_details_overtime">Overtime</string>
-    <string name="job_details_overtime_text">£%d per hour</string>
+    <string name="job_details_overtime_text">£%s per hour</string>
     <string name="job_details_mandatory_requirements">Requirements </string>
     <string name="job_details_qualifications">Qualifications </string>
     <string name="job_details_experience_types">Types of experience </string>
